# smo-qubo

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: run_tests_and_docs.yml
docs/: index.md  qubo_to_ising.md  smo_qubo_problem.md
docs/tutorials/: qubo.ipynb
examples/: qubo.py
main/: index.html
smoqubo/: generator.py  solver.py
tests/: test_generator.py  test_solver.py
v0.1.0/: 404.html
v0.1.0/qubo_to_ising/: index.html
v0.1.0/search/: search_index.json
v0.1.0/smo_qubo_problem/: index.html
